fix: text align class jomyers-about

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -2,23 +2,23 @@
   max-width: 1105px;
 }
 
-h2 {
-  margin-bottom: 25px;
-}
-
-p {
-  margin-bottom: 20px;
-
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
 .jomyers {
   &-about {
     display: flex;
     padding: 56px 0 68px;
     justify-content: space-between;
+    text-align: center;
+    h2 {
+      margin-bottom: 25px;
+    }
+
+    p {
+      margin-bottom: 20px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
 
     &-image {
       max-width: 32.58%;
@@ -31,27 +31,29 @@ p {
 }
 
 @media screen and (max-width: 1100px) {
-  h2 {
-    font-size: 24px;
-  }
-  p {
-    font-size: 16px;
-  }
-  h2, p {
-    margin-bottom: 15px;
+  .jomyers-about {
+    h2 {
+      font-size: 24px;
+    }
+    p {
+      font-size: 16px;
+    }
+    h2, p {
+      margin-bottom: 15px;
+    }
   }
 }
 
 @media screen and (max-width: 767px) {
-  h2 {
-    font-size: 22px;
-    margin-bottom: 13px;
-  }
-  p {
-    font-size: 18px;
-  }
   .jomyers {
     &-about {
+      h2 {
+        font-size: 22px;
+        margin-bottom: 13px;
+      }
+      p {
+        font-size: 18px;
+      }
       flex-direction: column-reverse;
       align-items: center;
       padding: 20px 0 40px;
